# ilios-monorepo

./: .envrc.template  .gitignore  .prettierrc  .replit  Makefile  README.md  app.yaml  cloudbuild.yaml  env.example  package-lock.json  package.json  pyproject.toml  replit.md  requirements-dev.txt  requirements.txt  requirements_dev.txt  requirements_test.txt
alembic/: README.md  env.py
app/: __init__.py  (+1 more)
docai/ilios-DocAI/: mypy.ini  pyproject.toml  requirements.txt
docai/ilios-DocAI/notebooks/: chatbot_include_key_value_extraction.ipynb  file_enrichment_pipeline.ipynb  gemini_test.ipynb  poison_pills_acc_impr.ipynb
docai/ilios-DocAI/notebooks/docai-156/: file_enrichment_pipeline.ipynb
docai/ilios-DocAI/notebooks/instructions-generation/: instructions-generation.ipynb
docai/ilios-DocAI/notebooks/posprocessing-analysis/: compare_postprocessing.ipynb  postprocessing-analysis.ipynb
docai/ilios-DocAI/notebooks/validation_data_analysis/: subcriber-management-eval.ipynb  validation_and_few_shots_data_analysis_epc.ipynb  validation_and_few_shots_data_analysis_interconnection_agreement.ipynb  validation_and_few_shots_data_analysis_ppa.ipynb
docai/ilios-DocAI/output-best/v12-gemini-15-tests/: fp-analysis.ipynb
docai/ilios-DocAI/src/chatbot/: profiling.py
docai/ilios-DocAI/src/chatbot/modules/: clarification.py
docai/ilios-DocAI/src/chatbot/prompt_templates/: classification.py
docai/ilios-DocAI/src/chatbot/validation/: pipeline.py
docai/ilios-DocAI/src/deployment/cloud_function/key_value_extraction_trigger/: main.py
docai/ilios-DocAI/src/deployment/cloud_run_job/key_value_extraction/: utils.py
docai/ilios-DocAI/src/deployment/fast_api/: chatbot.py  cloudbuild.yaml  test_payload.py
docai/ilios-DocAI/src/deployment/fast_api/models/: chatbot_status.py
docai/ilios-DocAI/src/doc_ai/: doc_ai_test.py  file_sequence.py  processor.py  processors.py
docai/ilios-DocAI/src/embeddings/: vertex.py
docai/ilios-DocAI/src/outputs/: output-basic.csv
docai/ilios-DocAI/src/pipelines/: mappings.py
docai/ilios-DocAI/src/pipelines/co_terminus_check/: Coterminous Review (9.5.24).xlsx  project-previews.csv  test-data.csv
docai/ilios-DocAI/src/pipelines/poison_pills/: main.py  poison-pills-rules.csv
docai/ilios-DocAI/src/pipelines/term_extraction/: utils.py
docai/ilios-DocAI/src/pipelines/term_summary/: base.py
docai/ilios-DocAI/src/prompts/: prompts.py  terms_and_definitions_prompts.csv
docai/ilios-DocAI/src/test/deployment/: test_get_example_data.py
docai/ilios-DocAI/src/test/evaluation/: llm_evaluation.py
docai/ilios-DocAI/src/test/pipeline/: test_sql_retriever.py
docai/ilios-DocAI/src/user_interface/: file_handler.py
docai/ilios-DocAI/src/user_interface/pages/: Keyword_extraction.py
docai/ilios-DocAI/src/validation/: prompts.py
docai/ilios-DocAI/src/validation_test/: Dockerfile
(+1577 files in other folders)
